change src and License

--- a/standalone.html
+++ b/standalone.html
@@ -27,7 +27,7 @@
   <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" crossorigin></script>
   <!-- Load our React component. -->
 
-  <script src="../finalATM.jsx" defer type="text/babel"></script>
+  <script src="finalATM.jsx" defer type="text/babel"></script>
 </body>
 
 </html>
